@@ -1,7 +1,7 @@
 .\"
-.\" $Id: smi_config.3.in,v 1.12 2000/02/22 18:27:01 strauss Exp $
+.\" $Id: smi_config.3.in,v 1.13 2000/10/19 09:18:37 strauss Exp $
 .\"
-.TH smi_config 3  "October 18, 2000" "IBR" "SMI Management Information Library"
+.TH smi_config 3  "November 1, 2000" "IBR" "SMI Management Information Library"
 .SH NAME
 .\" START OF MAN PAGE COPIES
 smiInit,
@@ -122,10 +122,16 @@ a path name (identified by containing at least one dot or slash character),
 this
 is assumed to be the exact file to read. Otherwise, if a module is identified
 by its plain module name, the correspondant file (either SMIv1/2 or
-SMIng) is searched along a path, which is initialized by the \fBSMIPATH\fP
-environment variable or by
-@mibdir@ if \fBSMIPATH\fP is not set. This path can also be controlled
-my the \fBsmiGetPath()\fP and \fBsmiSetPath()\fP functions (see above).
+SMIng) is searched along a path. This path is initialized with @smipath@.
+Afterwards the optional global and user configuration files are parsed for
+`path' commands, and finally the optional \fBSMIPATH\fP environment variable
+is evaluated. The `path' command argument and the environment variable
+either start with a path separator character (`:' on UNIX-like systems, `;'
+on MS-Windows systems) to append
+to the path, or end with a path separator character to prepend to the path,
+or otherwise completely replace the path.
+The path can also be controlled by the \fBsmiGetPath()\fP 
+and \fBsmiSetPath()\fP functions (see above).
 .PP
 When files are searched by a given module name, they might have no
 extension or one of the extensions `.my', `.smiv2', `.sming', `.mib',
@@ -144,8 +150,9 @@ using this tag.
 The \fBload\fP command is used to preload a given MIB module. If multiple
 modules shall be preloaded, multiple \fBload\fP commands must be used.
 .PP
-The \fBpath\fP command allows to prepend a component to the MIB module
-search path.
+The \fBpath\fP command allows to prepend or append components to the
+MIB module search path or to modify it completely (see 
+also MODULE LOCATIONS above).
 .PP
 The \fBlevel\fP command sets the error level.
 .PP
@@ -161,7 +168,7 @@ Example configuration:
   #
 
   # add a private directory
-  path /usr/home/strauss/lib/mibs
+  path :/usr/home/strauss/lib/mibs
  
   # don't show any errors by default
   level 0
